--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
   schedule:
     # - cron: '*/5 * * * *'
     # 表达式生成  https://crontab.guru/
-    - cron: '0 */3 * * *'
+    - cron: '15 */2 * * *'
 
 jobs:
   deploy:
@@ -37,8 +37,8 @@ jobs:
       
     - name: 提交更改
       run: |                 
-        git config --local user.email '${{ secrets.EMAIL }}'
-        git config --local user.name '${{ secrets.NAME }}'
+        git config --local user.email "actions@github.com"
+        git config --local user.name "GitHub Actions"
         git pull origin main
         git add ./sub/*
         git add ./Long_term_subscription1
